# laplace-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  lambda_function.py  pyproject.toml  requirements.txt  test_api.py
.cursor/rules/: codingRule.mdc  general.mdc  prd.mdc  techStack.mdc
.github/workflows/: deploy.yml
app/: main.py
app/api/: __init__.py  dependencies.py
app/api/v1/: __init__.py
app/api/v1/routes/: __init__.py  charts.py  fundamentals.py  markets.py  related.py  simulation.py
app/api/v2/: __init__.py
app/api/v2/routes/: __init__.py
app/models/: __init__.py  enums.py
app/schemas/: chart.py  details.py  fundamental.py  market.py  related.py  search.py  simulation.py  stock.py
app/services/: data.csv  dynamodb.py  industry_averages.py  market.csv  market.py  simulation.py
tests/api/routes/: test_markets.py
